--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,4 +1,4 @@
-table {
+/* table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -19,4 +19,4 @@ table {
     text-align: center;
     background-color: #04AA6D;
     color: white;
-  }
+  } */
