--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,12 @@
   text-gray-500
   /* py-8; */
 }
+.navButton{
+  @apply
+  p-4
+  active:text-indigo-600 
+  hover:underline 
+  underline-offset-8 
+  font-light
+
+}
